Deck Init including same card error