@@ -1,43 +1,45 @@
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
 public class Deck {
     public int cardsInDeck;
-    private Card cards[];
+    private static Card[] cards;
 
-    public Deck(){
+    public Deck() {
         cards = new Card[16];
         fillDeck();
     }
 
-    public void fillDeck(){
+    public void fillDeck() {
         cardsInDeck = 0;
 
-        Card.CardType[] types = new Card.CardType[] {Card.CardType.GUARD};
-        for (Card.CardType type : types){
-            for (int i = 0; i < 5; i++){
+        Card.CardType[] types = new Card.CardType[]{Card.CardType.GUARD};
+        for (Card.CardType type : types) {
+            for (int i = 0; i < 5; i++) {
                 cards[cardsInDeck++] = new Card(type);
             }
         }
 
         types = new Card.CardType[]{Card.CardType.BARON, Card.CardType.PRIEST, Card.CardType.HANDMAID, Card.CardType.PRINCE};
-        for (Card.CardType type : types){
-            for (int i = 0; i < 2; i++){
+        for (Card.CardType type : types) {
+            for (int i = 0; i < 2; i++) {
                 cards[cardsInDeck++] = new Card(type);
             }
         }
 
-        types = new Card.CardType[]{Card.CardType.KING,Card.CardType.COUNTESS,Card.CardType.PRINCESS};
-        for (Card.CardType type : types){
-            for (int i = 0; i < 1; i++){
-                cards[cardsInDeck++] = new Card(type);
-            }
+
+        types = new Card.CardType[]{Card.CardType.KING, Card.CardType.COUNTESS, Card.CardType.PRINCESS};
+        for (Card.CardType type : types) {
+            cards[cardsInDeck++] = new Card(type);
         }
     }
 
-    private void shuffleDeck() {
-        Collections.shuffle(List.of(cards));
+    public static void shuffleDeck() {
+        List<Card> cardList = Arrays.asList(cards);
+        Collections.shuffle(cardList);
+        cardList.toArray(cards);
     }
 
     public static void drawCards(ArrayList<String> deck, int numberOfCardsToDraw) {
@@ -52,5 +54,11 @@ public class Deck {
         }
     }
 
+    public void showDeck() {
+        for (Card card : cards) {
+            System.out.println(Card.getCardType());
+        }
+
 //drawcards?
+    }
 }
